@@ -155,6 +155,7 @@ enum cb_usage {
   CB_USAGE_COMP_X,
   CB_USAGE_DISPLAY,
   CB_USAGE_FLOAT,
+  CB_USAGE_DOUBLE,
   CB_USAGE_INDEX,
   CB_USAGE_NATIONAL,
   CB_USAGE_OBJECT,
