@@ -47,6 +47,7 @@ typedef struct __cob_external {
 #define COB_TYPE_NUMERIC_BINARY		0x11
 #define COB_TYPE_NUMERIC_PACKED		0x12
 #define COB_TYPE_NUMERIC_FLOAT		0x13
+#define COB_TYPE_NUMERIC_DOUBLE		0x14
 #define COB_TYPE_NUMERIC_EDITED		0x24
 
 #define COB_TYPE_ALPHANUMERIC		0x21
