@@ -1,3 +1,8 @@
+2005-05-31  Roger While <simrw@sim-basis.de>
+
+	* common.h, common.c, numeric.c, move.c, termio.c :
+	    Rough implementation of COMP-1/2 fields.
+
 2005-05-27  Roger While <simrw@sim-basis.de>
 
 	* byteswap.h : u_int16_t etc. are not necessarily defined
